@@ -1,6 +1,6 @@
 --- /dev/null
 +++ b/optionrom/extboot.S
-@@ -0,0 +1,695 @@
+@@ -0,0 +1,691 @@
 +/*
 + * Extended Boot Option ROM
 + *
@@ -22,6 +22,9 @@
 + *   Authors: Anthony Liguori <aliguori@us.ibm.com>
 + */
 +
++#define OLD_INT19	(0x80 * 4)	/* re-use INT 0x80 BASIC vector */
++#define OLD_INT13	(0x81 * 4)	/* re-use INT 0x81 BASIC vector */
++
 +.code16
 +.text
 +	.global _start
@@ -40,7 +43,7 @@
 +
 +	/* save old int 19 */
 +	mov (0x19*4), %eax
-+	mov %eax, %cs:old_int19
++	mov %eax, (OLD_INT19)
 +
 +	/* install out int 19 handler */
 +	movw $int19_handler, (0x19*4)
@@ -51,6 +54,7 @@
 +	lret
 +
 +int19_handler:
++	push %eax /* reserve space for lret */
 +	push %eax
 +	push %bx
 +	push %cx
@@ -61,47 +65,30 @@
 +	xor %ax, %ax
 +	mov %ax, %ds
 +
-+	movw $0x404, %dx
-+	inb %dx, %al
-+	cmp $1, %al
-+	je 1f
-+	cmp $2, %al
-+	je 2f
-+	jmp 3f
-+
-+1: /* hook int13: intb(0x404) == 1 */
 +	/* save old int 13 to int 2c */
 +	mov (0x13*4), %eax
-+	mov %eax, %cs:old_int13
++	mov %eax, (OLD_INT13)
 +
 +	/* install our int 13 handler */
 +	movw $int13_handler, (0x13*4)
 +	mov %cs, (0x13*4+2)
-+	jmp 3f
 +
-+2: /* linux boot: intb(0x404) == 2 */
-+	cli
-+	cld
-+	mov $0x9000, %ax
-+	mov %ax, %ds
-+	mov %ax, %es
-+	mov %ax, %fs
-+	mov %ax, %gs
-+	mov %ax, %ss
-+	mov $0x8ffe, %sp
-+	ljmp $0x9000 + 0x20, $0
-+
-+3: /* fall through: inb(0x404) == 0 */
 +	/* restore previous int $0x19 handler */
-+	mov %cs:old_int19,%eax
++	mov (OLD_INT19),%eax
 +	mov %eax,(0x19*4)
-+	
++
++	/* write old handler as return address onto stack */
++	push %bp
++	mov %sp, %bp
++	mov %eax, 14(%bp)
++	pop %bp
++
 +	pop %ds
 +	pop %dx
 +	pop %cx
 +	pop %bx
 +	pop %eax
-+	ljmpw *%cs:old_int19
++	lret
 +
 +#define FLAGS_CF	0x01
 +
@@ -629,7 +616,21 @@
 +int13_handler:
 +	cmp $0x80, %dl
 +	je 1f
-+	ljmpw *%cs:old_int13
++
++	/* write old handler as return address onto stack */
++	push %eax
++	push %eax
++	push %ds
++	push %bp
++	mov %sp, %bp
++	xor %ax, %ax
++	mov %ax, %ds
++	mov (OLD_INT13), %eax
++	mov %eax, 8(%bp)
++	pop %bp
++	pop %ds
++	pop %eax
++	lret
 +1:
 +	cmp $0x0, %ah
 +	jne 1f
@@ -689,10 +690,5 @@
 +	int $0x18  /* boot failed */
 +	iret
 +
-+/* Variables */
-+.align 4, 0
-+old_int13:	.long 0
-+old_int19:	.long 0
-+	
 +.align 512, 0
 +_end:
