@@ -6,8 +6,10 @@ seabios (0.6.0+git20100710-1) UNRELEASED; urgency=low
   * Update from QEMU 0.13:
     - 00_optionrom_buildsystem.patch
     - 02_optionrom_linuxboot.patch
+  * Update from QEMU-KVM 0.13:
+    - 01_optionrom_extboot.patch
 
- -- Aurelien Jarno <aurel32@debian.org>  Sun, 01 Aug 2010 17:53:32 +0200
+ -- Aurelien Jarno <aurel32@debian.org>  Sun, 01 Aug 2010 18:32:52 +0200
 
 seabios (0.5.1-3) unstable; urgency=low
 
